added SelectFileInfo Component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Dencryptor</string>
+    <string name="file_type">Dosya Tipi</string>
+    <string name="file_size">Dosya Boyutu</string>
+    <string name="file_content">Dosya İçeriği</string>
+    <string name="file_size_byte_value">%1$s byte</string>
+    <string name="open_file_selector">Dosya Seçim Ekranını Aç</string>
 </resources>
