add FileOperationsManager. add KeyCreationComponent and logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="clear_selected_content">Seçili İçeriği Temizle</string>
     <string name="public_key">Açık Anahtar</string>
     <string name="private_key">Gizli Anahtar</string>
+    <string name="create_keypair">Anahtar Oluştur</string>
 </resources>
